# devpi-ldap

./: .flake8  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  dev-requirements.txt  devpi-ldap.py  pyproject.toml  ruff-strict.toml  setup.py  tox.ini  windows-vm.rst
.github/workflows/: main.yml
devpi_ldap/: __init__.py  main.py
scripts/: setup-389-ds.sh
tests/: conftest.py  test_ldap.py
