# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools", "setuptools_changelog_shortener", "wheel"]
build-backend = "setuptools.build_meta"


[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "webtest",
]


[project]
dynamic = ["version", "readme"]
name = "devpi-ldap"
description = "devpi-ldap: LDAP authentication for devpi-server"
dependencies = [
    "PyYAML",
    "devpi-server>=6",
    "ldap3>=2",
]
license = "MIT"
license-files = ["LICENSE"]
maintainers = [
    {name = "Florian Schulze", email = "mail@pyfidelity.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[project.urls]
"Source Code" = "https://github.com/devpi/devpi-ldap"


[project.scripts]
devpi-ldap = "devpi_ldap.main:main"


[project.entry-points.devpi_server]
devpi-ldap = "devpi_ldap.main"


[tool.ruff]
extend = "ruff-strict.toml"


[tool.ruff.format]
exclude = [
    "devpi-ldap.py",
    "devpi_ldap/__init__.py",
    "devpi_ldap/main.py",
    "tests/conftest.py",
    "tests/test_ldap.py",
]


[tool.ruff.lint.extend-per-file-ignores]
"devpi_ldap/main.py" = [
    "ARG001", # maybe cleanup later - unused function argument
    "ARG002", # maybe cleanup later - unused method argument
    "B904", # maybe cleanup later
    "C405", # cleanup soon - set literal instead of set call
    "FIX002", # cleanup later - TODO
    "I001", # maybe cleanup later - import block unsorted
    "PLR0912", # maybe cleanup later
    "PLW0603", # maybe cleanup later - global statement
    "RET502", # maybe cleanup later - implicit return None
    "RET503", # maybe cleanup later - missing return
    "RET504", # maybe cleanup later - unnecessary assignment before return
    "RET505", # maybe cleanup later - unnecessary elif after return
    "RUF017", # cleanup soon - avoid quadratic list summation
    "SIM102", # maybe cleanup later
    "UP032", # cleanup later - f-string instead of format
]
"tests/conftest.py" = [
    "I001", # maybe cleanup later - import block unsorted
    "PGH004", # cleanup soon
    "SIM105", # cleanup soon
]
"tests/test_ldap.py" = [
    "ARG001", # maybe cleanup later - unused function argument
    "ARG002", # maybe cleanup later - unused method argument
    "C402", # maybe cleanup later - rewrite as dict comprehension
    "ERA001", # cleanup soon
    "I001", # maybe cleanup later - import block unsorted
    "RET504", # maybe cleanup later - unnecessary assignment before return
    "RET505", # maybe cleanup later - unnecessary elif after return
    "RSE102", # maybe cleanup later
    "RUF012", # cleanup later
    "RUF059", # cleanup later - unpacked variable unused
    "UP004", # cleanup later - inherit from 'object'
    "UP010", # cleanup later
    "UP025", # maybe cleanup later - unicode literals
]


[tool.setuptools]
packages = [
    "devpi_ldap",
]


[tool.setuptools.dynamic]
version = {attr = "devpi_ldap.__version__"}
readme = {file = ["README.rst", "CHANGELOG.short.rst"]}


[tool.setuptools_changelog_shortener]
read_from = "CHANGELOG.rst"
write_to = "CHANGELOG.short.rst"
count = 5
delimiter = "^==+"
title = "=========\nChangelog\n========="
